# smarttutor

./: .dockerignore  .gitignore  README.md  app.py  check_sd.py  docker-compose.yml  langgraph.json  pyproject.toml  requirements.txt  runner.py
archive/: runner.py
archive/backend/: retrieval.py  web_search.py
archive/backend/clients/: qa_client.py  retrieval_client.py
archive/backend/core/: db.py
archive/backend/routers/: ingest.py
backend/: langgraph_pipeline.py
backend/clients/: ingestion_client.py  web_search_client.py
backend/core/: db.py
backend/dspy_modules/: signatures.py
backend/routers/: qa.py
backend/services/: ingestion.py  qa.py
backend/services/ingestion_service/: Dockerfile  app.py  db.py  requirements.txt  service.py
backend/services/orchestrator_service/: Dockerfile  app.py  config.py  langgraph_pipeline.py  requirements.txt  service.py
backend/services/orchestrator_service/clients/: qa_client.py  web_search_client.py
backend/services/orchestrator_service/dspy_modules/: signatures.py
backend/services/qa_service/: Dockerfile  app.py  config.py  llm.py  prompt.py  requirements.txt  retrieval_client.py  service.py
backend/services/retrieval_service/: Dockerfile  app.py  config.py  requirements.txt  search.py  service.py
backend/services/web_search_service/: Dockerfile  app.py  config.py  llm.py  prompt.py  requirements.txt  service.py
models/: models.py
shared/schemas/: ingestion.py  orchestrator.py  qa.py  retrieval.py  web_search.py
utils/: utils.py
