[project]
name = "smarttutor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.124.2",
    "langcache>=0.11.1",
    "langchain>=1.1.2",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.1",
    "langchain-groq>=1.1.0",
    "langchain-huggingface>=1.1.0",
    "langgraph>=1.0.4",
    "openai>=2.9.0",
    "pymongo[srv]>=4.15.5",
    "pypdf>=6.4.1",
    "sentence-transformers>=5.1.2",
    "tavily-python>=0.7.14",
    "uvicorn>=0.38.0",
]
